--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col">colonne 1</div>
-        <div class="col">colonne 2</div>
+    <div class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col">colonne 1</div>
+        </div>
       </div>
     </div>
-
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
