header + accroche +bouteille de vin

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,101 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
-  <body>
+
+<body>
+
     <div class="header">
-      <div class="container">
-        <div class="row">
-          <div class="col">colonne 1</div>
+        <div class="row ">
+          <div class="col">
+            <div class="Logo">Alpivino</div>
+            <div class="navigation">
+              <div class="accueil">accueil</div>
+              Le domaine
+              Philosoqhie
+              Nos vins
+              Actualités
+              Contact
+            </div>
+            <div class="icons">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 18 16" fill="none">
+                <path d="M8.85494 6.99953C7.89274 6.99953 7.0686 6.65649 6.38254 5.97043C5.69647 5.28437 5.35383 4.46062 5.35461 3.4992C5.35538 2.53777 5.69803 1.71325 6.38254 1.02563C7.06705 0.338009 7.89118 -0.00385644 8.85494 3.28115e-05C9.8187 0.00392207 10.6428 0.346176 11.3273 1.0268C12.0118 1.70742 12.3545 2.53194 12.3553 3.50036C12.356 4.46879 12.0134 5.29253 11.3273 5.9716C10.6413 6.65066 9.81714 6.99253 8.85494 6.99953ZM0.6875 15.4365V13.516C0.6875 13.0345 0.827513 12.5841 1.10754 12.1648C1.38834 11.7448 1.7656 11.4189 2.23931 11.1871C3.34075 10.6589 4.44297 10.263 5.54596 9.99931C6.64817 9.73484 7.75117 9.60261 8.85494 9.60261C9.95871 9.60261 11.0621 9.73484 12.1651 9.99931C13.2681 10.2638 14.3695 10.6597 15.4694 11.1871C15.9439 11.4189 16.3211 11.7448 16.6012 12.1648C16.882 12.5841 17.0224 13.0345 17.0224 13.516V15.4365H0.6875ZM1.85428 14.2697H15.8556V13.516C15.8556 13.2577 15.772 13.0146 15.6047 12.7867C15.4383 12.5596 15.2076 12.3675 14.9128 12.2104C13.953 11.7452 12.9628 11.3889 11.9422 11.1416C10.9217 10.8942 9.89259 10.7702 8.85494 10.7694C7.81728 10.7686 6.78819 10.8923 5.76765 11.1404C4.74711 11.3886 3.7569 11.7448 2.79703 12.2092C2.50145 12.3663 2.27082 12.5584 2.10513 12.7856C1.9379 13.0135 1.85428 13.2569 1.85428 13.516V14.2697ZM8.85494 5.83392C9.49667 5.83392 10.0462 5.60523 10.5036 5.14785C10.961 4.69048 11.1893 4.14053 11.1885 3.49803C11.1877 2.85552 10.9594 2.30636 10.5036 1.85054C10.0478 1.39472 9.49822 1.16603 8.85494 1.16448C8.21165 1.16292 7.66249 1.39161 7.20745 1.85054C6.75241 2.30947 6.52372 2.85864 6.52138 3.49803C6.51905 4.13742 6.74774 4.68698 7.20745 5.14669C7.66716 5.60639 8.21632 5.83469 8.85494 5.83158" fill="#979797"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <path d="M15.8285 4.16155C15.783 4.09685 15.7225 4.04404 15.6523 4.00758C15.5821 3.97111 15.5041 3.95204 15.425 3.95199H4.88422L4.08632 1.20045C3.77342 0.116965 3.02989 0 2.72494 0H0.597455C0.324769 0 0.104248 0.220769 0.104248 0.493192C0.104248 0.765615 0.325017 0.986368 0.59744 0.986368H2.72467C2.79197 0.986368 2.99734 0.986368 3.13742 1.47037L5.88226 11.558C5.94186 11.7708 6.13581 11.9178 6.35706 11.9178H13.0616C13.2697 11.9178 13.4554 11.7874 13.5257 11.5915L15.8889 4.61203C15.9433 4.4608 15.9207 4.29243 15.8285 4.16155H15.8285ZM12.7145 10.9317H6.7314L5.16144 4.93862H14.7238L12.7145 10.9317ZM11.7363 12.9174C11.0504 12.9174 10.4947 13.4731 10.4947 14.159C10.4947 14.8449 11.0504 15.4007 11.7363 15.4007C12.4222 15.4007 12.978 14.8449 12.978 14.159C12.978 13.4731 12.4222 12.9174 11.7363 12.9174ZM7.26632 12.9174C6.58042 12.9174 6.02465 13.4731 6.02465 14.159C6.02465 14.8449 6.58042 15.4007 7.26632 15.4007C7.95222 15.4007 8.50799 14.8449 8.50799 14.159C8.50799 13.4731 7.95222 12.9174 7.26632 12.9174Z" fill="#979797"/>
+              </svg>
+              <div class="langues">EN</div>
+            </div>
+          
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="accroche">
+      <div class="container">
+        <div class="row">
+          <div class="col-5 offset-7">
+            <h1>Un vin façonné par les sommets</h1>
+            <div class="texte">Nos vins d’altitude, en plusieurs séries uniques, célèbrent la diversité et la pureté des terroirs alpins suisses</div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="vins">
+      <div class="container">
+        <div class="row">
+          <div class="col-3"><img  class="imagevin" src="Image/bouteille.png" alt=""></div>
+          <div class="col-5 offset-1">
+            <div class="titre">Gewürztraminer</div>
+            <div class="texte">Découvrez notre Gewürztraminer en biodynamie du Valais : un vin nature aux arômes floraux intenses, élevé dans le respect du terroir alpin pour révéler toute la pureté et la richesse de la région.</div>
+            <div class="bouton"><h3>Nos Vins</h3></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="valeurs">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">Valeurs</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="vignerons">
+      <div class="container">
+        <div class="row">
+          <div class="col-12"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="evenement">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">évènement</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="row">
+        <div class="col">footer</div>
+      </div>
+    </div>
+  </div>
+
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
