--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,21 @@
                 région.
               </div>
               <div class="bouton"><h3>Nos Vins</h3></div>
+              <div class="forme">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="457"
+                  height="1328"
+                  viewBox="0 0 457 1328"
+                  fill="none"
+                >
+                  <path
+                    opacity="0.3"
+                    d="M213.262 484.261L0.634104 605.498M213.262 484.261L169.18 649.068M213.262 484.261L511.41 704.544M213.262 484.261L533.566 413.358M213.262 484.261L390.713 292.662M0.634104 605.498L169.18 649.068M0.634104 605.498L124.567 904.803M169.18 649.068L511.41 704.544M169.18 649.068L373.993 851.761M169.18 649.068L124.567 904.803M511.41 704.544L373.993 851.761M511.41 704.544L793.328 932.946M511.41 704.544L787.898 732.688L793.328 932.946M511.41 704.544L533.566 413.358M511.41 704.544L855.512 529.723M373.993 851.761L793.328 932.946M373.993 851.761L124.567 904.803M373.993 851.761L287.708 1005.2M793.328 932.946L540.518 969.074M124.567 904.803L239.566 1141.59M124.567 904.803L287.708 1005.2M239.566 1141.59L287.708 1005.2M239.566 1141.59L390.042 1055.33M287.708 1005.2L540.518 969.074M533.566 413.358L855.512 529.723M533.566 413.358L596.32 311.605L734.026 355.715M533.566 413.358L734.026 355.715M533.566 413.358L390.713 292.662M855.512 529.723L734.026 355.715M390.713 292.662L551.923 0.933607L356.333 52.0811L390.713 292.662ZM540.518 969.074L390.042 1055.33M540.518 969.074L500 1327.5L390.042 1055.33"
+                    stroke="#D9D9D9"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
         </div>
@@ -165,6 +180,21 @@
           </div>
         </div>
       </div>
+      <div class="forme">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="470"
+          height="1143"
+          viewBox="0 0 470 1143"
+          fill="none"
+        >
+          <path
+            opacity="0.3"
+            d="M-173.738 484.261L-386.366 605.498M-173.738 484.261L-217.82 649.068M-173.738 484.261L124.41 704.544M-173.738 484.261L146.566 413.358M-173.738 484.261L3.71332 292.662M-386.366 605.498L-217.82 649.068M-386.366 605.498L-262.433 904.803M-217.82 649.068L124.41 704.544M-217.82 649.068L-13.0065 851.761M-217.82 649.068L-262.433 904.803M124.41 704.544L-13.0065 851.761M124.41 704.544L406.328 932.946M124.41 704.544L400.898 732.688L406.328 932.946M124.41 704.544L146.566 413.358M124.41 704.544L468.512 529.723M-13.0065 851.761L406.328 932.946M-13.0065 851.761L-262.433 904.803M-262.433 904.803L-147.434 1141.59L-99.2921 1005.2L-262.433 904.803ZM146.566 413.358L468.512 529.723M146.566 413.358L209.32 311.605M146.566 413.358L347.026 355.715M146.566 413.358L3.71332 292.662M146.566 413.358L155.745 207.146M468.512 529.723L347.026 355.715M209.32 311.605L347.026 355.715M209.32 311.605L155.745 207.146M3.71332 292.662L164.923 0.933607M3.71332 292.662L-30.6673 52.0811L164.923 0.933607M164.923 0.933607L155.745 207.146"
+            stroke="#D9D9D9"
+          />
+        </svg>
+      </div>
     </div>
 
     <div class="evenement">
@@ -190,86 +220,103 @@
             </div>
           </div>
         </div>
+        <div class="forme">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="1200"
+            height="1182"
+            viewBox="0 0 1200 1182"
+            fill="none"
+          >
+            <path
+              opacity="0.3"
+              d="M349 698L189.5 1183L-67 829.5L349 698ZM349 698L463 1183L903.5 736M349 698L903.5 736M349 698L810 531.5M349 698L647 334M903.5 736L841 1183H1194.5M903.5 736L1194.5 1183M903.5 736L810 531.5M903.5 736L856.75 633.75L810 531.5M903.5 736H1461.5M903.5 736L1121.75 602.5M1194.5 1183L1461.5 736M1461.5 736L1340 469M1461.5 736L1596.5 607.5L1340 469M810 531.5L927.5 1M810 531.5L647 334M810 531.5L1121.75 602.5M1340 469L1121.75 602.5M1340 469L1133.75 235M927.5 1L647 334M927.5 1L1133.75 235M927.5 1L1121.75 609V602.5M1121.75 602.5L1133.75 235"
+              stroke="#D9D9D9"
+            />
+          </svg>
+        </div>
       </div>
     </div>
 
     <div class="footer">
-      <div class="row">
-        <div class="col">
-          <div class="informations">
-            <div class="logo-adresse">
-              <div class="Logo">Alpivino</div>
-              <div class="infofooter">
-                Rue du Château 3 <br />1788 Praz-Vully, Suisse
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="informations">
+              <div class="logo-adresse">
+                <div class="Logo">Alpivino</div>
+                <div class="infofooter">
+                  Rue du Château 3 <br />1788 Praz-Vully, Suisse
+                </div>
+              </div>
+              <div class="menu-navigation">
+                <div class="titre-footer">Menu</div>
+                <div class="infofooter">
+                  Accueil <br />Le domaine <br />Nos valeurs <br />Nos vins
+                  <br />Actualité <br />contact
+                </div>
+              </div>
+              <div class="vente-date">
+                <div class="titre-footer">Vente / Dégustation</div>
+                <div class="infofooter">
+                  Mecredi, Jeudi,Vendredi :
+                  <br />9h30 - 12h et 14h - 17h30 <br />Samedi :9h30 - 15h30
+                </div>
+              </div>
+              <div class="contacter">
+                <div class="titre-footer">Nous contacter</div>
+                <div class="infofooter">
+                  <div>+41 26 123 45 67</div>
+                  <div>Newsletter</div>
+                </div>
+              </div>
+              <div class="réseaux-sociaux">
+                <div class="titre-footer">Social Média</div>
+                <div class="icons">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                  >
+                    <path
+                      d="M8.475 0.25H20.025C24.425 0.25 28 3.825 28 8.225V19.775C28 21.8901 27.1598 23.9186 25.6642 25.4142C24.1686 26.9098 22.1401 27.75 20.025 27.75H8.475C4.075 27.75 0.5 24.175 0.5 19.775V8.225C0.5 6.1099 1.34022 4.08143 2.83582 2.58582C4.33143 1.09022 6.3599 0.25 8.475 0.25ZM8.2 3C6.88718 3 5.62813 3.52152 4.69982 4.44982C3.77152 5.37813 3.25 6.63718 3.25 7.95V20.05C3.25 22.7862 5.46375 25 8.2 25H20.3C21.6128 25 22.8719 24.4785 23.8002 23.5502C24.7285 22.6219 25.25 21.3628 25.25 20.05V7.95C25.25 5.21375 23.0362 3 20.3 3H8.2ZM21.4688 5.0625C21.9246 5.0625 22.3618 5.24358 22.6841 5.56591C23.0064 5.88824 23.1875 6.32541 23.1875 6.78125C23.1875 7.23709 23.0064 7.67426 22.6841 7.99659C22.3618 8.31892 21.9246 8.5 21.4688 8.5C21.0129 8.5 20.5757 8.31892 20.2534 7.99659C19.9311 7.67426 19.75 7.23709 19.75 6.78125C19.75 6.32541 19.9311 5.88824 20.2534 5.56591C20.5757 5.24358 21.0129 5.0625 21.4688 5.0625ZM14.25 7.125C16.0734 7.125 17.822 7.84933 19.1114 9.13864C20.4007 10.428 21.125 12.1766 21.125 14C21.125 15.8234 20.4007 17.572 19.1114 18.8614C17.822 20.1507 16.0734 20.875 14.25 20.875C12.4266 20.875 10.678 20.1507 9.38864 18.8614C8.09933 17.572 7.375 15.8234 7.375 14C7.375 12.1766 8.09933 10.428 9.38864 9.13864C10.678 7.84933 12.4266 7.125 14.25 7.125ZM14.25 9.875C13.156 9.875 12.1068 10.3096 11.3332 11.0832C10.5596 11.8568 10.125 12.906 10.125 14C10.125 15.094 10.5596 16.1432 11.3332 16.9168C12.1068 17.6904 13.156 18.125 14.25 18.125C15.344 18.125 16.3932 17.6904 17.1668 16.9168C17.9404 16.1432 18.375 15.094 18.375 14C18.375 12.906 17.9404 11.8568 17.1668 11.0832C16.3932 10.3096 15.344 9.875 14.25 9.875Z"
+                      fill="#979797"
+                    />
+                  </svg>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                  >
+                    <path
+                      d="M26.88 0H1.12C0.5005 0 0 0.5005 0 1.12V26.88C0 27.4995 0.5005 28 1.12 28H26.88C27.4995 28 28 27.4995 28 26.88V1.12C28 0.5005 27.4995 0 26.88 0ZM23.646 8.1725H21.4095C19.656 8.1725 19.3165 9.0055 19.3165 10.2305V12.929H23.5025L22.9565 17.1535H19.3165V28H14.952V17.157H11.3015V12.929H14.952V9.814C14.952 6.1985 17.1605 4.228 20.3875 4.228C21.9345 4.228 23.261 4.3435 23.6495 4.396V8.1725H23.646Z"
+                      fill="#979797"
+                    />
+                  </svg>
+                </div>
               </div>
             </div>
-            <div class="menu-navigation">
-              <div class="titre-footer">Menu</div>
-              <div class="infofooter">
-                Accueil <br />Le domaine <br />Nos valeurs <br />Nos vins
-                <br />Actualité <br />contact
+            <div class="séparation"></div>
+            <div class="indispensable">
+              <div class="gauche">
+                <div class="indispensablefooter">
+                  Protection des données / cookies
+                </div>
+                <div class="indispensablefooter">
+                  Condition générales de vente
+                </div>
+                <img src="Image/bio-Suisse.png" alt="bio Suisse" />
+                <img src="Image/gault&Millau.png" alt="gault&Millau" />
               </div>
-            </div>
-            <div class="vente-date">
-              <div class="titre-footer">Vente / Dégustation</div>
-              <div class="infofooter">
-                Mecredi, Jeudi,Vendredi :
-                <br />9h30 - 12h et 14h - 17h30 <br />Samedi :9h30 - 15h30
-              </div>
-            </div>
-            <div class="contacter">
-              <div class="titre-footer">Nous contacter</div>
-              <div class="infofooter">
-                <div>+41 26 123 45 67</div>
-                <div>Newsletter</div>
-              </div>
-            </div>
-            <div class="réseaux-sociaux">
-              <div class="titre-footer">Social Média</div>
-              <div class="icons">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                >
-                  <path
-                    d="M8.475 0.25H20.025C24.425 0.25 28 3.825 28 8.225V19.775C28 21.8901 27.1598 23.9186 25.6642 25.4142C24.1686 26.9098 22.1401 27.75 20.025 27.75H8.475C4.075 27.75 0.5 24.175 0.5 19.775V8.225C0.5 6.1099 1.34022 4.08143 2.83582 2.58582C4.33143 1.09022 6.3599 0.25 8.475 0.25ZM8.2 3C6.88718 3 5.62813 3.52152 4.69982 4.44982C3.77152 5.37813 3.25 6.63718 3.25 7.95V20.05C3.25 22.7862 5.46375 25 8.2 25H20.3C21.6128 25 22.8719 24.4785 23.8002 23.5502C24.7285 22.6219 25.25 21.3628 25.25 20.05V7.95C25.25 5.21375 23.0362 3 20.3 3H8.2ZM21.4688 5.0625C21.9246 5.0625 22.3618 5.24358 22.6841 5.56591C23.0064 5.88824 23.1875 6.32541 23.1875 6.78125C23.1875 7.23709 23.0064 7.67426 22.6841 7.99659C22.3618 8.31892 21.9246 8.5 21.4688 8.5C21.0129 8.5 20.5757 8.31892 20.2534 7.99659C19.9311 7.67426 19.75 7.23709 19.75 6.78125C19.75 6.32541 19.9311 5.88824 20.2534 5.56591C20.5757 5.24358 21.0129 5.0625 21.4688 5.0625ZM14.25 7.125C16.0734 7.125 17.822 7.84933 19.1114 9.13864C20.4007 10.428 21.125 12.1766 21.125 14C21.125 15.8234 20.4007 17.572 19.1114 18.8614C17.822 20.1507 16.0734 20.875 14.25 20.875C12.4266 20.875 10.678 20.1507 9.38864 18.8614C8.09933 17.572 7.375 15.8234 7.375 14C7.375 12.1766 8.09933 10.428 9.38864 9.13864C10.678 7.84933 12.4266 7.125 14.25 7.125ZM14.25 9.875C13.156 9.875 12.1068 10.3096 11.3332 11.0832C10.5596 11.8568 10.125 12.906 10.125 14C10.125 15.094 10.5596 16.1432 11.3332 16.9168C12.1068 17.6904 13.156 18.125 14.25 18.125C15.344 18.125 16.3932 17.6904 17.1668 16.9168C17.9404 16.1432 18.375 15.094 18.375 14C18.375 12.906 17.9404 11.8568 17.1668 11.0832C16.3932 10.3096 15.344 9.875 14.25 9.875Z"
-                    fill="#979797"
-                  />
-                </svg>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                >
-                  <path
-                    d="M26.88 0H1.12C0.5005 0 0 0.5005 0 1.12V26.88C0 27.4995 0.5005 28 1.12 28H26.88C27.4995 28 28 27.4995 28 26.88V1.12C28 0.5005 27.4995 0 26.88 0ZM23.646 8.1725H21.4095C19.656 8.1725 19.3165 9.0055 19.3165 10.2305V12.929H23.5025L22.9565 17.1535H19.3165V28H14.952V17.157H11.3015V12.929H14.952V9.814C14.952 6.1985 17.1605 4.228 20.3875 4.228C21.9345 4.228 23.261 4.3435 23.6495 4.396V8.1725H23.646Z"
-                    fill="#979797"
-                  />
-                </svg>
-              </div>
-            </div>
-          </div>
-          <div class="séparation"></div>
-          <div class="indispensable">
-            <div class="gauche">
-              <div class="indispensablefooter">
-                Protection des données / cookies
-              </div>
-              <div class="indispensablefooter">
-                Condition générales de vente
-              </div>
-              <img src="Image/bio-Suisse.png" alt="bio Suisse" />
-              <img src="Image/gault&Millau.png" alt="gault&Millau" />
-            </div>
 
-            <div class="droite">
-              <div class="indispensablefooter">
-                2024 Aplivino Tous droits réservés
+              <div class="droite">
+                <div class="indispensablefooter">
+                  2024 Aplivino Tous droits réservés
+                </div>
               </div>
             </div>
           </div>
