--- a/src/index.html
+++ b/src/index.html
@@ -1,70 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>eikon parcel starter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="scss/main.scss" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-
-  <body>
-    <div class="header">
-      <div class="row">
-        <div class="col">
-          <div class="Logo">Alpivino</div>
-          <div class="navigation">
-            <div class="accueil">accueil</div>
-            <div>Le domaine</div>
-            <div>Philosoqhie</div>
-            <div>Nos vins</div>
-            <div>Actualités</div>
-            <div>Contact</div>
-          </div>
-          <div class="icons">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="18"
-              height="16"
-              viewBox="0 0 18 16"
-              fill="none"
-            >
-              <path
-                d="M8.85494 6.99953C7.89274 6.99953 7.0686 6.65649 6.38254 5.97043C5.69647 5.28437 5.35383 4.46062 5.35461 3.4992C5.35538 2.53777 5.69803 1.71325 6.38254 1.02563C7.06705 0.338009 7.89118 -0.00385644 8.85494 3.28115e-05C9.8187 0.00392207 10.6428 0.346176 11.3273 1.0268C12.0118 1.70742 12.3545 2.53194 12.3553 3.50036C12.356 4.46879 12.0134 5.29253 11.3273 5.9716C10.6413 6.65066 9.81714 6.99253 8.85494 6.99953ZM0.6875 15.4365V13.516C0.6875 13.0345 0.827513 12.5841 1.10754 12.1648C1.38834 11.7448 1.7656 11.4189 2.23931 11.1871C3.34075 10.6589 4.44297 10.263 5.54596 9.99931C6.64817 9.73484 7.75117 9.60261 8.85494 9.60261C9.95871 9.60261 11.0621 9.73484 12.1651 9.99931C13.2681 10.2638 14.3695 10.6597 15.4694 11.1871C15.9439 11.4189 16.3211 11.7448 16.6012 12.1648C16.882 12.5841 17.0224 13.0345 17.0224 13.516V15.4365H0.6875ZM1.85428 14.2697H15.8556V13.516C15.8556 13.2577 15.772 13.0146 15.6047 12.7867C15.4383 12.5596 15.2076 12.3675 14.9128 12.2104C13.953 11.7452 12.9628 11.3889 11.9422 11.1416C10.9217 10.8942 9.89259 10.7702 8.85494 10.7694C7.81728 10.7686 6.78819 10.8923 5.76765 11.1404C4.74711 11.3886 3.7569 11.7448 2.79703 12.2092C2.50145 12.3663 2.27082 12.5584 2.10513 12.7856C1.9379 13.0135 1.85428 13.2569 1.85428 13.516V14.2697ZM8.85494 5.83392C9.49667 5.83392 10.0462 5.60523 10.5036 5.14785C10.961 4.69048 11.1893 4.14053 11.1885 3.49803C11.1877 2.85552 10.9594 2.30636 10.5036 1.85054C10.0478 1.39472 9.49822 1.16603 8.85494 1.16448C8.21165 1.16292 7.66249 1.39161 7.20745 1.85054C6.75241 2.30947 6.52372 2.85864 6.52138 3.49803C6.51905 4.13742 6.74774 4.68698 7.20745 5.14669C7.66716 5.60639 8.21632 5.83469 8.85494 5.83158"
-                fill="#979797"
-              />
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              fill="none"
-            >
-              <path
-                d="M15.8285 4.16155C15.783 4.09685 15.7225 4.04404 15.6523 4.00758C15.5821 3.97111 15.5041 3.95204 15.425 3.95199H4.88422L4.08632 1.20045C3.77342 0.116965 3.02989 0 2.72494 0H0.597455C0.324769 0 0.104248 0.220769 0.104248 0.493192C0.104248 0.765615 0.325017 0.986368 0.59744 0.986368H2.72467C2.79197 0.986368 2.99734 0.986368 3.13742 1.47037L5.88226 11.558C5.94186 11.7708 6.13581 11.9178 6.35706 11.9178H13.0616C13.2697 11.9178 13.4554 11.7874 13.5257 11.5915L15.8889 4.61203C15.9433 4.4608 15.9207 4.29243 15.8285 4.16155H15.8285ZM12.7145 10.9317H6.7314L5.16144 4.93862H14.7238L12.7145 10.9317ZM11.7363 12.9174C11.0504 12.9174 10.4947 13.4731 10.4947 14.159C10.4947 14.8449 11.0504 15.4007 11.7363 15.4007C12.4222 15.4007 12.978 14.8449 12.978 14.159C12.978 13.4731 12.4222 12.9174 11.7363 12.9174ZM7.26632 12.9174C6.58042 12.9174 6.02465 13.4731 6.02465 14.159C6.02465 14.8449 6.58042 15.4007 7.26632 15.4007C7.95222 15.4007 8.50799 14.8449 8.50799 14.159C8.50799 13.4731 7.95222 12.9174 7.26632 12.9174Z"
-                fill="#979797"
-              />
-            </svg>
-            <div class="langues">EN</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+<extends src="base-layout.html">
+  <block name="content">
     <div class="accroche">
       <div class="container">
         <div class="row">
@@ -98,7 +33,9 @@
                 terroir alpin pour révéler toute la pureté et la richesse de la
                 région.
               </div>
-              <div class="bouton"><h3>Nos Vins</h3></div>
+              <div class="bouton">
+                <h3><a href="detail.html">Nos Vins</a></h3>
+              </div>
               <div class="forme">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -196,134 +133,5 @@
         </svg>
       </div>
     </div>
-
-    <div class="evenement">
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="verrevin">
-              <img src="Image/verres_Evenement.png" alt="verre à vins" />
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="detail">
-              <div class="infofooter">Événement</div>
-              <div class="titre">Savourez l'authenticité des vins naturels</div>
-              <div class="texte">
-                Lors de notre événement, plongez dans l’univers des vins
-                naturels en découvrant notre gamme biodynamique. Profitez d’une
-                dégustation guidée où chaque vin révèle l’authenticité de notre
-                terroir, accompagnée d’explications sur nos méthodes de
-                production respectueuses de l’environnement.
-              </div>
-              <div class="bouton"><h3>S'inscrire</h3></div>
-            </div>
-          </div>
-        </div>
-        <div class="forme">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="1200"
-            height="1182"
-            viewBox="0 0 1200 1182"
-            fill="none"
-          >
-            <path
-              opacity="0.3"
-              d="M349 698L189.5 1183L-67 829.5L349 698ZM349 698L463 1183L903.5 736M349 698L903.5 736M349 698L810 531.5M349 698L647 334M903.5 736L841 1183H1194.5M903.5 736L1194.5 1183M903.5 736L810 531.5M903.5 736L856.75 633.75L810 531.5M903.5 736H1461.5M903.5 736L1121.75 602.5M1194.5 1183L1461.5 736M1461.5 736L1340 469M1461.5 736L1596.5 607.5L1340 469M810 531.5L927.5 1M810 531.5L647 334M810 531.5L1121.75 602.5M1340 469L1121.75 602.5M1340 469L1133.75 235M927.5 1L647 334M927.5 1L1133.75 235M927.5 1L1121.75 609V602.5M1121.75 602.5L1133.75 235"
-              stroke="#D9D9D9"
-            />
-          </svg>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="informations">
-              <div class="logo-adresse">
-                <div class="Logo">Alpivino</div>
-                <div class="infofooter">
-                  Rue du Château 3 <br />1788 Praz-Vully, Suisse
-                </div>
-              </div>
-              <div class="menu-navigation">
-                <div class="titre-footer">Menu</div>
-                <div class="infofooter">
-                  Accueil <br />Le domaine <br />Nos valeurs <br />Nos vins
-                  <br />Actualité <br />contact
-                </div>
-              </div>
-              <div class="vente-date">
-                <div class="titre-footer">Vente / Dégustation</div>
-                <div class="infofooter">
-                  Mecredi, Jeudi,Vendredi :
-                  <br />9h30 - 12h et 14h - 17h30 <br />Samedi :9h30 - 15h30
-                </div>
-              </div>
-              <div class="contacter">
-                <div class="titre-footer">Nous contacter</div>
-                <div class="infofooter">
-                  <div>+41 26 123 45 67</div>
-                  <div>Newsletter</div>
-                </div>
-              </div>
-              <div class="réseaux-sociaux">
-                <div class="titre-footer">Social Média</div>
-                <div class="icons">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="28"
-                    height="28"
-                    viewBox="0 0 28 28"
-                    fill="none"
-                  >
-                    <path
-                      d="M8.475 0.25H20.025C24.425 0.25 28 3.825 28 8.225V19.775C28 21.8901 27.1598 23.9186 25.6642 25.4142C24.1686 26.9098 22.1401 27.75 20.025 27.75H8.475C4.075 27.75 0.5 24.175 0.5 19.775V8.225C0.5 6.1099 1.34022 4.08143 2.83582 2.58582C4.33143 1.09022 6.3599 0.25 8.475 0.25ZM8.2 3C6.88718 3 5.62813 3.52152 4.69982 4.44982C3.77152 5.37813 3.25 6.63718 3.25 7.95V20.05C3.25 22.7862 5.46375 25 8.2 25H20.3C21.6128 25 22.8719 24.4785 23.8002 23.5502C24.7285 22.6219 25.25 21.3628 25.25 20.05V7.95C25.25 5.21375 23.0362 3 20.3 3H8.2ZM21.4688 5.0625C21.9246 5.0625 22.3618 5.24358 22.6841 5.56591C23.0064 5.88824 23.1875 6.32541 23.1875 6.78125C23.1875 7.23709 23.0064 7.67426 22.6841 7.99659C22.3618 8.31892 21.9246 8.5 21.4688 8.5C21.0129 8.5 20.5757 8.31892 20.2534 7.99659C19.9311 7.67426 19.75 7.23709 19.75 6.78125C19.75 6.32541 19.9311 5.88824 20.2534 5.56591C20.5757 5.24358 21.0129 5.0625 21.4688 5.0625ZM14.25 7.125C16.0734 7.125 17.822 7.84933 19.1114 9.13864C20.4007 10.428 21.125 12.1766 21.125 14C21.125 15.8234 20.4007 17.572 19.1114 18.8614C17.822 20.1507 16.0734 20.875 14.25 20.875C12.4266 20.875 10.678 20.1507 9.38864 18.8614C8.09933 17.572 7.375 15.8234 7.375 14C7.375 12.1766 8.09933 10.428 9.38864 9.13864C10.678 7.84933 12.4266 7.125 14.25 7.125ZM14.25 9.875C13.156 9.875 12.1068 10.3096 11.3332 11.0832C10.5596 11.8568 10.125 12.906 10.125 14C10.125 15.094 10.5596 16.1432 11.3332 16.9168C12.1068 17.6904 13.156 18.125 14.25 18.125C15.344 18.125 16.3932 17.6904 17.1668 16.9168C17.9404 16.1432 18.375 15.094 18.375 14C18.375 12.906 17.9404 11.8568 17.1668 11.0832C16.3932 10.3096 15.344 9.875 14.25 9.875Z"
-                      fill="#979797"
-                    />
-                  </svg>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="28"
-                    height="28"
-                    viewBox="0 0 28 28"
-                    fill="none"
-                  >
-                    <path
-                      d="M26.88 0H1.12C0.5005 0 0 0.5005 0 1.12V26.88C0 27.4995 0.5005 28 1.12 28H26.88C27.4995 28 28 27.4995 28 26.88V1.12C28 0.5005 27.4995 0 26.88 0ZM23.646 8.1725H21.4095C19.656 8.1725 19.3165 9.0055 19.3165 10.2305V12.929H23.5025L22.9565 17.1535H19.3165V28H14.952V17.157H11.3015V12.929H14.952V9.814C14.952 6.1985 17.1605 4.228 20.3875 4.228C21.9345 4.228 23.261 4.3435 23.6495 4.396V8.1725H23.646Z"
-                      fill="#979797"
-                    />
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="séparation"></div>
-            <div class="indispensable">
-              <div class="gauche">
-                <div class="indispensablefooter">
-                  Protection des données / cookies
-                </div>
-                <div class="indispensablefooter">
-                  Condition générales de vente
-                </div>
-                <img src="Image/bio-Suisse.png" alt="bio Suisse" />
-                <img src="Image/gault&Millau.png" alt="gault&Millau" />
-              </div>
-
-              <div class="droite">
-                <div class="indispensablefooter">
-                  2024 Aplivino Tous droits réservés
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="js/main.js" type="module"></script>
-  </body>
-</html>
+  </block>
+</extends>
