page detail, detail du vin  + l'image

--- a/src/base-layout.html
+++ b/src/base-layout.html
@@ -21,13 +21,13 @@
     />
   </head>
 
-  <body>
+  <body class="{{ page }}">
     <div class="header">
       <div class="row">
         <div class="col">
-          <div class="Logo">Alpivino</div>
+          <div class="Logo"><a href="index.html"> Alpivino</a></div>
           <div class="navigation">
-            <div class="accueil">accueil</div>
+            <div class="accueil"><a href="index.html"> accueil</a></div>
             <div>Le domaine</div>
             <div>Philosoqhie</div>
             <div>Nos vins</div>
@@ -114,7 +114,7 @@
           <div class="col">
             <div class="informations">
               <div class="logo-adresse">
-                <div class="Logo">Alpivino</div>
+                <div class="Logo"><a href="index.html">Alpivino</a></div>
                 <div class="infofooter">
                   Rue du Château 3 <br />1788 Praz-Vully, Suisse
                 </div>
