--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<extends src="base-layout.html">
+<extends src="base-layout.html" locals='{"page": "home"}'>
   <block name="content">
     <div class="accroche">
       <div class="container">
@@ -26,7 +26,7 @@
           </div>
           <div class="col-5 offset-1">
             <div class="detail">
-              <div class="titre">Gewürztraminer</div>
+              <div class="titre">Pinot Noir Gamay</div>
               <div class="texte">
                 Découvrez notre Gewürztraminer en biodynamie du Valais : un vin
                 nature aux arômes floraux intenses, élevé dans le respect du
