--- a/src/detail.html
+++ b/src/detail.html
@@ -5,87 +5,59 @@
         <div class="col"><div class="nomvin">Pinot Noir Gamay</div></div>
       </div>
     </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-7">
-          <img src="Image/mockup.png" alt="" />
-        </div>
-        <div class="col-5">
-          <div class="row">
-            <div class="col-4">cepage</div>
-            <div class="col-8">100% Chardonnay</div>
-          </div>
-          <div class="row">
-            <div class="col-4">cepage</div>
-            <div class="col-8">100% Chardonnay</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- <div class="text-image-container">
-      <div class="mockup"></div>
-
+    <div class="image-detail">
       <div class="container">
         <div class="row">
-          <div class="col-6 offset-6">
-            <div class="detailtexte">
-              <div class="élément">
-                <div class="titre-footer">Cépage(s)</div>
-                <div class="texte">100% Chardonnay</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Milésime actuel</div>
-                <div class="texte">2022</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Premier milésime</div>
-                <div class="texte">2003</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Provencance</div>
-                <div class="texte">Sélection des Côteau de Sierre</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Accords</div>
-                <div class="texte">Viandes rouges, fromage</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Température</div>
-                <div class="texte">14° - 17°</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Garde</div>
-                <div class="texte">5ans - 10ans</div>
-              </div>
-              <div class="élément">
-                <div class="titre-footer">Vinification</div>
-                <div class="texte">
-                  5Fermentations et élevages de 18 mois en barriques pour chacun
-                  des cépages avant assemblage en cuve inox.
+          <div class="col-7">
+            <div class="imagee">
+              <img src="Image/mockup.png" alt="bouteille de pinot" />
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="texte-detail">
+              <div class="row">
+                <div class="col-4">
+                  <div class="titre-footer">Cépage</div>
+                  <div class="titre-footer">Milésime actuel</div>
+                  <div class="titre-footer">Premier milésime</div>
+                  <div class="titre-footer">Provenance</div>
+                  <div class="titre-footer">Accords</div>
+                  <div class="titre-footer">Température</div>
+                  <div class="titre-footer">Garde</div>
+                  <div class="titre-footer">Vinification</div>
+                </div>
+                <div class="col-8">
+                  <div class="texte">100% Chardonnay</div>
+                  <div class="texte">2022</div>
+                  <div class="texte">2003</div>
+                  <div class="texte">Sélection des Côteau de Sierre</div>
+                  <div class="texte">Viandes rouges, fromage</div>
+                  <div class="texte">14° - 17°</div>
+                  <div class="texte">5ans - 10ans</div>
+                  <div class="texte">
+                    Fermentations et élevages de 18 mois en barriques pour
+                    chacun des cépages avant assemblage en cuve inox.
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div> -->
-
-      <div class="container">
-        <div class="row">
-          <div class="col-7 offset-5">
-            <div class="boutique">
-              <div class="texte">
-                L'Éclat de Lune s'ouvre sur des arômes délicats de fleurs
-                blanches et de pêche juteuse, accompagnés de nuances subtiles de
-                noisette grillée. En bouche, ce vin se révèle d'une grande
-                élégance, avec une acidité vive qui équilibre parfaitement la
-                richesse des fruits mûrs. Les notes de vanille et de zeste de
-                citron persistent en finale, offrant une belle longueur et une
-                complexité saisissante.
-              </div>
-              <div class="bouton"><h3>Boutique</h3></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-7 offset-5">
+          <div class="boutique">
+            <div class="texte">
+              L'Éclat de Lune s'ouvre sur des arômes délicats de fleurs blanches
+              et de pêche juteuse, accompagnés de nuances subtiles de noisette
+              grillée. En bouche, ce vin se révèle d'une grande élégance, avec
+              une acidité vive qui équilibre parfaitement la richesse des fruits
+              mûrs. Les notes de vanille et de zeste de citron persistent en
+              finale, offrant une belle longueur et une complexité saisissante.
             </div>
+            <div class="bouton"><h3>Boutique</h3></div>
           </div>
         </div>
       </div>
