--- a/src/detail2.html
+++ b/src/detail2.html
@@ -1,3 +1,119 @@
 <extends src="base-layout.html" locals='{"page": "wine2"}'>
-  <block name="content"> </block>
+  <block name="content">
+    <div class="container">
+      <div class="row">
+        <div class="col"><div class="nomvin">Gewürztraminer</div></div>
+      </div>
+    </div>
+    <div class="image-detail">
+      <div class="container">
+        <div class="row">
+          <div class="col-7">
+            <div class="imagee">
+              <img src="Image/mockup2.png" alt="bouteille de pinot" />
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="texte-detail">
+              <div class="row">
+                <div class="col-4">
+                  <div class="titre-footer">Cépage</div>
+                  <div class="titre-footer">Milésime actuel</div>
+                  <div class="titre-footer">Premier milésime</div>
+                  <div class="titre-footer">Provenance</div>
+                  <div class="titre-footer">Accords</div>
+                  <div class="titre-footer">Température</div>
+                  <div class="titre-footer">Garde</div>
+                  <div class="titre-footer">Vinification</div>
+                </div>
+                <div class="col-8">
+                  <div class="texte">100% Chardonnay</div>
+                  <div class="texte">2022</div>
+                  <div class="texte">2003</div>
+                  <div class="texte">Sélection des Côteau de Sierre</div>
+                  <div class="texte">Viandes rouges, fromage</div>
+                  <div class="texte">14° - 17°</div>
+                  <div class="texte">5ans - 10ans</div>
+                  <div class="texte">
+                    Fermentations et élevages de 18 mois en barriques pour
+                    chacun des cépages avant assemblage en cuve inox.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-7 offset-5">
+          <div class="boutique">
+            <div class="texte">
+              L'Éclat de Lune s'ouvre sur des arômes délicats de fleurs blanches
+              et de pêche juteuse, accompagnés de nuances subtiles de noisette
+              grillée. En bouche, ce vin se révèle d'une grande élégance, avec
+              une acidité vive qui équilibre parfaitement la richesse des fruits
+              mûrs. Les notes de vanille et de zeste de citron persistent en
+              finale, offrant une belle longueur et une complexité saisissante.
+            </div>
+            <div class="bouton"><h3>Boutique</h3></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="vin">
+          <div class="col-3">
+            <div class="block">
+              <div class="image-silhouette">
+                <img src="Image/silhouette.png" alt="vin" />
+              </div>
+              <div class="detail">
+                <div class="sous-titre">Silhouette</div>
+                <div class="texte">Un vin équilibré et doux en bouche.</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="block">
+              <div class="image-kid">
+                <img src="Image/kid.png" alt="vin" />
+              </div>
+              <div class="detail">
+                <div class="sous-titre">Le Kid</div>
+                <div class="texte">Un vin puissant et riche en saveurs.</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="block">
+              <div class="image-monteil">
+                <img src="Image/monteil.png" alt="vin" />
+              </div>
+              <div class="detail">
+                <div class="sous-titre">Le Monteil</div>
+                <div class="texte">Un vin aux arômes dominants de fruits.</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="block">
+              <div class="image-celine">
+                <img src="Image/céline.png" alt="vin" />
+              </div>
+              <div class="detail">
+                <div class="sous-titre">Céline</div>
+                <div class="texte">
+                  Un vin qui remplit bien la bouche avec une belle persistance
+                  aromatique.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </block>
 </extends>
