--- a/src/base-layout.html
+++ b/src/base-layout.html
@@ -27,12 +27,12 @@
         <div class="col">
           <div class="Logo"><a href="index.html"> Alpivino</a></div>
           <div class="navigation">
-            <div class="accueil"><a href="index.html"> accueil</a></div>
-            <div>Le domaine</div>
-            <div>Philosoqhie</div>
-            <div>Nos vins</div>
-            <div>Actualités</div>
-            <div>Contact</div>
+            <div class="nav"><a href="index.html"> accueil</a></div>
+            <div class="nav">Le domaine</div>
+            <div class="nav">Philosoqhie</div>
+            <div class="nav"><a href="detail2.html">Nos vins</a></div>
+            <div class="nav">Actualités</div>
+            <div class="nav">Contact</div>
           </div>
           <div class="icons">
             <svg
