--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
       <div class="container">
         <div class="row">
           <div class="col-3">
-            <img
-              class="imagevin"
-              src="Image/bouteille.png"
-              alt="bouteille de vin"
-            />
+            <a href="detail.html">
+              <img
+                class="imagevin"
+                src="Image/bouteille.png"
+                alt="bouteille de vin"
+              />
+            </a>
           </div>
           <div class="col-5 offset-1">
             <div class="detail">
