apres avoir poste

--- a/src/detail.html
+++ b/src/detail.html
@@ -102,7 +102,7 @@
             <div class="block">
               <div class="image-celine">
                 <a href="detail2.html"
-                  ><img src="Image/céline.png" alt="vin"
+                  ><img src="Image/celine.png" alt="vin"
                 /></a>
               </div>
               <div class="detail">
