--- a/src/detail2.html
+++ b/src/detail2.html
@@ -101,7 +101,7 @@
           <div class="col-3">
             <div class="block">
               <div class="image-celine">
-                <img src="Image/céline.png" alt="vin" />
+                <img src="Image/celine.png" alt="vin" />
               </div>
               <div class="detail">
                 <div class="sous-titre">Céline</div>
