--- a/src/base-layout.html
+++ b/src/base-layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>eikon parcel starter</title>
+    <title>vins</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
 
@@ -27,7 +27,7 @@
         <div class="col">
           <div class="Logo"><a href="index.html"> Alpivino</a></div>
           <div class="navigation">
-            <div class="nav"><a href="index.html"> accueil</a></div>
+            <div class="nav"><a href="index.html"> Accueil</a></div>
             <div class="nav">Le domaine</div>
             <div class="nav">Philosoqhie</div>
             <div class="nav"><a href="detail2.html">Nos vins</a></div>
